--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="purple_500">#6200EE</color>
     <color name="purple_700">#3700B3</color>
-
+    <color name="colorSelected">#D3D3D3</color>
 </resources>
