--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,10 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="16dp"
+    tools:ignore="ExtraText">
 
     <!-- Menu Icon at the top right -->
     <ImageButton
@@ -26,6 +28,21 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp" />
 
+    <!-- add the api widget here -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/AIbot"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/rounded_bg"
+        android:elevation="9dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTintMode="multiply"
+        android:padding="10dp" />
+
     <!-- RecyclerView for displaying notes -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notesRecyclerView"
@@ -33,7 +50,7 @@
         android:layout_height="0dp"
         android:layout_below="@id/separator"
         android:layout_above="@id/separatorBelow"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="100dp"
         android:layout_marginBottom="8dp" />
 
     <!-- Separator line above the plus button -->
