--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,6 +8,11 @@
         android:id="@+id/action_help"
         android:title="Help" />
     <item
+        android:id="@+id/action_streak"
+        android:title="Streak"/>.
+    <item
         android:id="@+id/action_logout"
         android:title="Logout" />
+
+
 </menu>
