--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -38,6 +38,13 @@
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
             android:textSize="14sp" />
+        <TextView
+            android:id="@+id/noteEmoji"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="8dp"
+            android:textSize="24sp" />
     </LinearLayout>
 
 </LinearLayout>
