--- a/app/src/main/res/layout/item_advice.xml
+++ b/app/src/main/res/layout/item_advice.xml
@@ -3,7 +3,8 @@
     android:id="@+id/adviceText"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:layout_margin="10dp"
     android:textSize="16sp"
     android:background="#F5F5F5"
+    style="@style/TextAppearance.PlayfairDisplay"
     android:textColor="#333" />
