--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="16dp"
-    android:background="@android:color/white"
+    android:padding="12dp"
+    android:background="@drawable/note_item_background"
     android:layout_margin="8dp"
     android:elevation="4dp">
 
@@ -23,31 +23,50 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
+        <!-- Note Title -->
         <TextView
             android:id="@+id/noteTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@android:color/black"
-            android:layout_marginBottom="4dp" />
+            android:layout_marginBottom="4dp"
+            android:ellipsize="end"
+            style="@style/TextAppearance.PlayfairDisplay"
+            android:maxLines="1" />
 
-        <!-- Update for note content -->
+        <!-- Note Content -->
         <TextView
             android:id="@+id/noteContent"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
             android:textSize="14sp"
             android:ellipsize="end"
-            android:maxLines="1" />
+            android:maxLines="2"
+            style="@style/TextAppearance.PlayfairDisplay"
+            android:layout_marginBottom="4dp" />
 
+        <!-- Note Emoji -->
         <TextView
             android:id="@+id/noteEmoji"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            style="@style/TextAppearance.PlayfairDisplay"
+            android:layout_marginTop="4dp" />
+
+        <!-- Note Date -->
+        <TextView
+            android:id="@+id/note_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Date"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="14sp"
+            style="@style/TextAppearance.PlayfairDisplay"
+            android:layout_marginTop="4dp" />
     </LinearLayout>
 
 </LinearLayout>
