--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="colorSelected">#D3D3D3</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="dark_gray">#786F80</color>
+    <color name="light_gray">#DAD8C9</color>
+
+
 </resources>
