--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,14 +1,24 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Base.Theme.JournalApp" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:fontFamily">@font/playfair</item>
     </style>
 
     <style name="Theme.JournalApp" parent="Base.Theme.JournalApp">
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">?attr/isLightTheme</item>
-        <item name="colorControlNormal">@color/black</item>
-        <item name="colorControlNormal">@color/white</item>
+        <item name="android:fontFamily">@font/playfair</item>
+        <item name="toolbarStyle">@style/Widget.Toolbar.PlayfairDisplay</item>
+        <item name="textAppearanceBody1">@style/TextAppearance.PlayfairDisplay</item>
+        <item name="textAppearanceHeadline1">@style/TextAppearance.PlayfairDisplay.Large</item>
+        <item name="textAppearanceSubtitle1">@style/TextAppearance.PlayfairDisplay.Small</item>
     </style>
+
+    <style name="Widget.Toolbar.PlayfairDisplay" parent="Widget.Material3.Toolbar">
+        <item name="titleTextAppearance">@style/TextAppearance.PlayfairDisplay</item>
+    </style>
+
+
 
 </resources>
