--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
         android:src="@drawable/ic_refresh"
         android:contentDescription="@string/refresh"
         android:visibility="gone"
+        app:tint="@color/icon_color"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:elevation="8dp" />
 
@@ -86,6 +87,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_trash"
+        app:tint="@color/icon_color"
         android:visibility="gone"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:contentDescription="@string/delete_selected" />
